src/GccAna/GccAna_Circ2d3Tan_1.cxx
@@ -89,11 +89,9 @@ GccAna_Circ2d3Tan::
   Standard_Real R1 = C1.Radius();
   Standard_Real R2 = C2.Radius();
   gp_Pnt2d center1(C1.Location());
-#ifdef OCCT_DEBUG
   gp_Pnt2d center2(C2.Location());
-#else
-  C2.Location() ;
-#endif
+  (void )center2;
+
   gp_Pnt2d origin3(L3.Location());
   gp_Dir2d dir3(L3.Direction());
   gp_Dir2d normL3(-dir3.Y(),dir3.X());
